fixed top nav spacing

--- a/css/framework.css
+++ b/css/framework.css
@@ -4896,7 +4896,7 @@ meta.foundation-mq-topbar {
   margin: 0;
 }
 .top-bar .name {
-  height: 100px;
+  max-height: 100px;
   margin: 0;
   font-size: 16px;
 }
