--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ textarea {
   .orbit-caption h2, .orbit-caption p {
     font-size: 18px;
     position: relative;
-    top: -50px;
+    top: -55px;
   }
   .orbit-container .orbit-slides-container {
 	  height: 125px;
